--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic|Josefin+Sans:400,400italic,700,700italic);
+/**
+ * font-family: 'Open Sans', sans-serif;
+ * font-family: 'Josefin Sans', sans-serif;
+ */
+html,
 body {
-    
+    font-family: 'Josefin Sans', sans-serif;
 }
